login.handlebars is completed

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,10 @@
     <ul>
       <li class="li-inline nav-item"><a href="/">Home</a></li>
       <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
+      <!-- Conditionally render login link with UNLESS-->
+      {{#unless loggedIn}}
       <li class="li-inline nav-item"><a href="/login">Login</a></li>
+      {{/unless}}
       <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
     </ul>
   </nav>
