--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,24 +1,25 @@
 <div class="card">
 
-  <h2 class="card-header">Login</h2>
+  <h2 class="card-header">LOGIN</h2>
 
   <form class="card-body login-form">
 
     <div class="form-group">
       <label class="form-label">Username:</label>
-      <input class="form-input" type="text" id="usernameLogin" />
+      <input class="form-input" type="text" id="username-input-login" />
     </div>
 
     <div class="form-group">
       <label class="form-label">Password:</label>
-      <input class="form-input" type="password" id="passwordLogin" />
+      <input class="form-input" type="password" id="password-input-login" />
     </div>
 
     <div class="form-group">
-      <button class="btn btn-primary" type="submit">Login</button>
+      <button class="btn btn-primary" type="submit">LOGIN</button>
     </div>
     <br>
     <a href="/signup">Sign Up Instead</a>
   </form>
-  <a 
+ 
 </div>
+<script src="./js/login.js"></script>
