--- a/views/partials/postItem.handlebars
+++ b/views/partials/postItem.handlebars
@@ -5,7 +5,8 @@
       <div class="col-4">posted by: {{user.username}} {{dateCreated}}</div>
     </div>  
   </a>
-  <div class="col-12">
+  {{!-- <div class="col-12">
+    <label class="form-label">Content:</label>
     <textarea class="" data-number="9">{{postContent}}</textarea>
-  </div>
+  </div> --}}
 </div>
