fetch still does not work, many updates on all files

--- a/views/all-posts-admin.handlebars
+++ b/views/all-posts-admin.handlebars
@@ -1,9 +1,10 @@
 
-<div class="card flex-column">
+<div class="card flex-column" id="x">
   {{#each posts as |post|}}
   {{> postItem post}}
   {{/each}}
 </div>
+
 
 
 
