--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,23 +1,17 @@
 <div class="card">
-
   <h2 class="card-header">Create New Post</h2>
-
   <form class="card-body" id="new-post-form">
-
-    <div class="form-group">
+    <input type="hidden" name="post-id" value="{{post.id}}"/>
+    <div>
       <label class="form-label">Title:</label>
       <input class="form-input" type="text" name="post-title"/>
     </div>
-
-    <div class="form-group">
+    <div>
       <label class="form-label">Content:</label>
       <textarea class="form-textarea form-input" name="post-body" data-number="8"></textarea>
     </div>
-
-    <div class="form-group">
-      <button class="btn btn-primary" type="submit">CREATE</button>
-    </div>
-  </form>
  
+    <button class="btn btn-primary">CREATE</button>
+  </form>
 </div>
 <script src="/js/new.js"></script>
