checks and updates and drier code - api server problem continues

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,11 @@
   <footer class="flex-row justify-center">
     &copy; The Tech Blog Folks
   </footer>
-</body>
-
-</html>
+  
+{{#if loggedIn}}
 <script src="/js/logout.js"></script>
+{{/if}}
+
+</body>
+</html>
+
