--- a/views/all-posts.handlebars
+++ b/views/all-posts.handlebars
@@ -1,5 +1,16 @@
+<div class="row">
+  <div class="col-auto">
+    {{!-- this can not be displayed somehow --}}
+    {{#each posts as |post|}}
+    <h2>Hi {{user.username}}! </h2>
+    {{/each}}
+  </div>
+</div>
+<br>
+{{#if posts.length}}
 <div class="card flex-column">
   {{#each posts as |post|}}
   {{> editItem post}}
   {{/each}}
 </div>
+{{/if}}
