--- a/views/partials/postItem.handlebars
+++ b/views/partials/postItem.handlebars
@@ -1,8 +1,8 @@
-<div class="card-body flex-row">
+<div class="card-body">
   <a href="/post/{{id}}">
-    <div class="card-header justify-space-between">
+    <div class="card-header  flex-row justify-space-between">
       <div class="col-8">Post Title: {{postTitle}}</div>
-      <div class="col-4">posted by: {{user.username}} {{dateCreated}}</div>
+      <div class="col-3">posted by: {{user.username}} date: {{format_date dateCreated}}</div>
     </div>  
   </a>
   {{!-- <div class="col-12">
