--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,12 +1,19 @@
-<div class="card flex-column">
+<div class="card">
   
   <div class="card-header flex-row justify-space-between">
     <div class="col-8">{{post.postTitle}}</div>
-    <div class="col-4">{{post.user.username}} / {{post.dateCreated}}</div>
+    <div class="col-3">{{post.user.username}} / {{post.dateCreated}}</div>
   </div>  
  
   <div class="card-body card-textarea">
     <div class="col-12">{{post.postContent}}</div>
   </div>
-
+  <div class="form" id="new-comment-form">
+      <input class="form-input" type="hidden" id={{post.id}} name={{post.id}}/>
+      <p>Comment:</p>
+      <textarea class="form-input" id="comment-body" name="comment-body"></textarea>
+      <button type="submit" class="btn btn-primary">Submit:</button>
+  </div>
 </div>
+
+<script src="/js/comment.js"></script>
