--- a/views/partials/postItem.handlebars
+++ b/views/partials/postItem.handlebars
@@ -1,12 +1,14 @@
-<div class="card-body">
-  <a href="/post/{{id}}">
-    <div class="card-header  flex-row justify-space-between">
-      <div class="col-8">Post Title: {{postTitle}}</div>
-      <div class="col-3">posted by: {{user.username}} date: {{format_date dateCreated}}</div>
-    </div>  
-  </a>
-  {{!-- <div class="col-12">
-    <label class="form-label">Content:</label>
-    <textarea class="" data-number="9">{{postContent}}</textarea>
-  </div> --}}
+<div class="card">
+  <div class="card-header  flex-row justify-space-between">
+    <h2>
+      <a href="/post/{{id}}">
+        <div class="col-8">{{postTitle}}</div>
+      </a>
+    </h2>
+    <div class="col-3">posted by: {{user.username}} date: {{format_date dateCreated}}
+    </div>
+  </div>  
+  <p class="card-body">
+   {{postContent}}
+  </p>
 </div>
