--- a/views/partials/postItem.handlebars
+++ b/views/partials/postItem.handlebars
@@ -5,7 +5,7 @@
         <div class="col-8">{{postTitle}}</div>
       </a>
     </h2>
-    <div class="col-3">posted by: {{user.username}} date: {{format_date dateCreated}}
+    <div class="col-3">posted by {{user.username}} on {{format_date dateCreated}}
     </div>
   </div>  
   <p class="card-body">
