--- a/views/partials/editItem.handlebars
+++ b/views/partials/editItem.handlebars
@@ -2,7 +2,7 @@
   <a href="dashboard/edit/{{id}}">
     <div class="card-header flex-row justify-space-between">
       <div class="col-8">Post Title: {{postTitle}}</div>
-      <div class="col-4">posted by: {{user.username}} date: {{format_date dateCreated}}</div>
+      <div class="col-4">posted by {{user.username}} on {{format_date dateCreated}}</div>
     </div>  
   </a>
   {{!-- <div class="col-12">
