--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header  flex-row justify-space-between">
     <h2>
-      <a href="/post/{{id}}">
+      <a href="/post/{{post.id}}">
         <div class="col-8">{{post.postTitle}}</div>
       </a>
     </h2>
@@ -15,11 +15,13 @@
 
 <div class="card">
   <div class="card-header"></div>
-  <div class="card-body" id="new-comment-form">
+  <form class="card-body" id="new-comment-form">
+
     <input type="hidden" name="post-id" value="{{post.id}}"/>
     <p class="form-label">Comment:</p>
     <textarea class="form-input" id="comment-body" name="comment-body"></textarea>
     <button type="submit" class="btn btn-primary">Submit:</button>
-  </div>
+  </form>
+  <p>gggggggggggggggggggggggg{{comments.commentContent}}</p>
 </div>
 <script src="/js/comment.js"></script>
