--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -12,16 +12,17 @@
    {{post.postContent}}
   </p>
 </div>
-
+<input type="hidden" name="post-id" value="{{post.id}}"/>
+{{!-- {{#if loggedIn}} --}}
 <div class="card">
   <div class="card-header"></div>
   <form class="card-body" id="new-comment-form">
-
-    <input type="hidden" name="post-id" value="{{post.id}}"/>
+    
     <p class="form-label">Comment:</p>
     <textarea class="form-input" id="comment-body" name="comment-body"></textarea>
     <button type="submit" class="btn btn-primary">Submit:</button>
   </form>
-  <p>gggggggggggggggggggggggg{{comments.commentContent}}</p>
+{{> comments post.comments}}
 </div>
+{{!-- {{/if}} --}}
 <script src="/js/comment.js"></script>
